Project/jsbachParser.py
# Generated from jsbach.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'%'", "'<-'", 
                     "'<?>'", "'<!>'", "'<:>'", "'<<'", "'8<'", "'='", "'/='", 
                     "'<'", "'<='", "'>'", "'>='", "'#'", "'if'", "'else'", 
                     "'while'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "SUM", "SUB", "MUL", "DIV", "MOD", "ASSIGN", 
                      "READ", "WRITE", "PLAY", "ADD", "TRIM", "EQUAL", "NEQUAL", 
                      "LT", "LEQ", "GT", "GEQ", "LENGTH", "IF", "ELSE", 
                      "WHILE", "INTVAL", "NOTE", "NAME", "VAR", "STRING", 
                      "COMMENT", "WS" ]

    RULE_program = 0
    RULE_function = 1
    RULE_parameters = 2
    RULE_statement = 3
    RULE_statements = 4
    RULE_list_note = 5
    RULE_expr = 6
    RULE_list_expr = 7

    ruleNames =  [ "program", "function", "parameters", "statement", "statements", 
                   "list_note", "expr", "list_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    SUM=9
    SUB=10
    MUL=11
    DIV=12
    MOD=13
    ASSIGN=14
    READ=15
    WRITE=16
    PLAY=17
    ADD=18
    TRIM=19
    EQUAL=20
    NEQUAL=21
    LT=22
    LEQ=23
    GT=24
    GEQ=25
    LENGTH=26
    IF=27
    ELSE=28
    WHILE=29
    INTVAL=30
    NOTE=31
    NAME=32
    VAR=33
    STRING=34
    COMMENT=35
    WS=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.FunctionContext)
            else:
                return self.getTypedRuleContext(jsbachParser.FunctionContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = jsbachParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 17 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 16
                self.function()
                self.state = 19 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsbachParser.NAME):
                    break

            self.state = 21
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(jsbachParser.NAME, 0)

        def statements(self):
            return self.getTypedRuleContext(jsbachParser.StatementsContext,0)


        def parameters(self):
            return self.getTypedRuleContext(jsbachParser.ParametersContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = jsbachParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(jsbachParser.NAME)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsbachParser.VAR:
                self.state = 24
                self.parameters()


            self.state = 27
            self.match(jsbachParser.T__0)
            self.state = 28
            self.statements()
            self.state = 29
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VAR)
            else:
                return self.getToken(jsbachParser.VAR, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_parameters

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = jsbachParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 31
                self.match(jsbachParser.VAR)
                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsbachParser.VAR):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def READ(self):
            return self.getToken(jsbachParser.READ, 0)
        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRead" ):
                return visitor.visitRead(self)
            else:
                return visitor.visitChildren(self)


    class WriteContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WRITE(self):
            return self.getToken(jsbachParser.WRITE, 0)
        def list_expr(self):
            return self.getTypedRuleContext(jsbachParser.List_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite" ):
                return visitor.visitWrite(self)
            else:
                return visitor.visitChildren(self)


    class AddContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)
        def ADD(self):
            return self.getToken(jsbachParser.ADD, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class CallContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NAME(self):
            return self.getToken(jsbachParser.NAME, 0)
        def list_expr(self):
            return self.getTypedRuleContext(jsbachParser.List_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)


    class PlayContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def PLAY(self):
            return self.getToken(jsbachParser.PLAY, 0)
        def list_expr(self):
            return self.getTypedRuleContext(jsbachParser.List_exprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlay" ):
                return visitor.visitPlay(self)
            else:
                return visitor.visitChildren(self)


    class TrimContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRIM(self):
            return self.getToken(jsbachParser.TRIM, 0)
        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrim" ):
                return visitor.visitTrim(self)
            else:
                return visitor.visitChildren(self)


    class IfElseContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(jsbachParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def statements(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.StatementsContext)
            else:
                return self.getTypedRuleContext(jsbachParser.StatementsContext,i)

        def ELSE(self):
            return self.getToken(jsbachParser.ELSE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfElse" ):
                return visitor.visitIfElse(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)
        def ASSIGN(self):
            return self.getToken(jsbachParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(jsbachParser.WHILE, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def statements(self):
            return self.getTypedRuleContext(jsbachParser.StatementsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(jsbachParser.IF, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)

        def statements(self):
            return self.getTypedRuleContext(jsbachParser.StatementsContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = jsbachParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_statement)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(jsbachParser.VAR)
                self.state = 37
                self.match(jsbachParser.ASSIGN)
                self.state = 38
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = jsbachParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(jsbachParser.IF)
                self.state = 40
                self.expr(0)
                self.state = 41
                self.match(jsbachParser.T__0)
                self.state = 42
                self.statements()
                self.state = 43
                self.match(jsbachParser.T__1)
                pass

            elif la_ == 3:
                localctx = jsbachParser.IfElseContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 45
                self.match(jsbachParser.IF)
                self.state = 46
                self.expr(0)
                self.state = 47
                self.match(jsbachParser.T__0)
                self.state = 48
                self.statements()
                self.state = 49
                self.match(jsbachParser.T__1)
                self.state = 50
                self.match(jsbachParser.ELSE)
                self.state = 51
                self.match(jsbachParser.T__0)
                self.state = 52
                self.statements()
                self.state = 53
                self.match(jsbachParser.T__1)
                pass

            elif la_ == 4:
                localctx = jsbachParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.match(jsbachParser.WHILE)
                self.state = 56
                self.expr(0)
                self.state = 57
                self.match(jsbachParser.T__0)
                self.state = 58
                self.statements()
                self.state = 59
                self.match(jsbachParser.T__1)
                pass

            elif la_ == 5:
                localctx = jsbachParser.CallContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 61
                self.match(jsbachParser.NAME)
                self.state = 63
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 62
                    self.list_expr()


                pass

            elif la_ == 6:
                localctx = jsbachParser.ReadContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.match(jsbachParser.READ)
                self.state = 66
                self.match(jsbachParser.VAR)
                pass

            elif la_ == 7:
                localctx = jsbachParser.WriteContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 67
                self.match(jsbachParser.WRITE)
                self.state = 68
                self.list_expr()
                pass

            elif la_ == 8:
                localctx = jsbachParser.PlayContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 69
                self.match(jsbachParser.PLAY)
                self.state = 70
                self.list_expr()
                pass

            elif la_ == 9:
                localctx = jsbachParser.TrimContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 71
                self.match(jsbachParser.TRIM)
                self.state = 72
                self.match(jsbachParser.VAR)
                self.state = 73
                self.match(jsbachParser.T__2)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(jsbachParser.T__3)
                pass

            elif la_ == 10:
                localctx = jsbachParser.AddContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 77
                self.match(jsbachParser.VAR)
                self.state = 78
                self.match(jsbachParser.ADD)
                self.state = 79
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.StatementContext)
            else:
                return self.getTypedRuleContext(jsbachParser.StatementContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_statements

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = jsbachParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 82
                self.statement()
                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.READ) | (1 << jsbachParser.WRITE) | (1 << jsbachParser.PLAY) | (1 << jsbachParser.TRIM) | (1 << jsbachParser.IF) | (1 << jsbachParser.WHILE) | (1 << jsbachParser.NAME) | (1 << jsbachParser.VAR))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_noteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOTE(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.NOTE)
            else:
                return self.getToken(jsbachParser.NOTE, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_list_note

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_note" ):
                return visitor.visitList_note(self)
            else:
                return visitor.visitChildren(self)




    def list_note(self):

        localctx = jsbachParser.List_noteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_list_note)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.match(jsbachParser.NOTE)
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==jsbachParser.NOTE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return jsbachParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ParenthsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParenths" ):
                return visitor.visitParenths(self)
            else:
                return visitor.visitChildren(self)


    class NoteListContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def list_note(self):
            return self.getTypedRuleContext(jsbachParser.List_noteContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNoteList" ):
                return visitor.visitNoteList(self)
            else:
                return visitor.visitChildren(self)


    class LengthContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LENGTH(self):
            return self.getToken(jsbachParser.LENGTH, 0)
        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLength" ):
                return visitor.visitLength(self)
            else:
                return visitor.visitChildren(self)


    class VarContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)


    class ListAccessContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(jsbachParser.VAR, 0)
        def expr(self):
            return self.getTypedRuleContext(jsbachParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListAccess" ):
                return visitor.visitListAccess(self)
            else:
                return visitor.visitChildren(self)


    class NoteContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOTE(self):
            return self.getToken(jsbachParser.NOTE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNote" ):
                return visitor.visitNote(self)
            else:
                return visitor.visitChildren(self)


    class ValueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTVAL(self):
            return self.getToken(jsbachParser.INTVAL, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)


    class RelationalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

        def EQUAL(self):
            return self.getToken(jsbachParser.EQUAL, 0)
        def NEQUAL(self):
            return self.getToken(jsbachParser.NEQUAL, 0)
        def GT(self):
            return self.getToken(jsbachParser.GT, 0)
        def GEQ(self):
            return self.getToken(jsbachParser.GEQ, 0)
        def LT(self):
            return self.getToken(jsbachParser.LT, 0)
        def LEQ(self):
            return self.getToken(jsbachParser.LEQ, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelational" ):
                return visitor.visitRelational(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(jsbachParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class ArithmeticContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a jsbachParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExprContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExprContext,i)

        def MUL(self):
            return self.getToken(jsbachParser.MUL, 0)
        def DIV(self):
            return self.getToken(jsbachParser.DIV, 0)
        def MOD(self):
            return self.getToken(jsbachParser.MOD, 0)
        def SUM(self):
            return self.getToken(jsbachParser.SUM, 0)
        def SUB(self):
            return self.getToken(jsbachParser.SUB, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArithmetic" ):
                return visitor.visitArithmetic(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = jsbachParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = jsbachParser.NoteListContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 93
                self.match(jsbachParser.T__4)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==jsbachParser.NOTE:
                    self.state = 94
                    self.list_note()


                self.state = 97
                self.match(jsbachParser.T__5)
                pass

            elif la_ == 2:
                localctx = jsbachParser.ListAccessContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 98
                self.match(jsbachParser.VAR)
                self.state = 99
                self.match(jsbachParser.T__2)
                self.state = 100
                self.expr(0)
                self.state = 101
                self.match(jsbachParser.T__3)
                pass

            elif la_ == 3:
                localctx = jsbachParser.LengthContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 103
                self.match(jsbachParser.LENGTH)
                self.state = 104
                self.match(jsbachParser.VAR)
                pass

            elif la_ == 4:
                localctx = jsbachParser.ParenthsContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 105
                self.match(jsbachParser.T__6)
                self.state = 106
                self.expr(0)
                self.state = 107
                self.match(jsbachParser.T__7)
                pass

            elif la_ == 5:
                localctx = jsbachParser.ValueContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 109
                self.match(jsbachParser.INTVAL)
                pass

            elif la_ == 6:
                localctx = jsbachParser.VarContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 110
                self.match(jsbachParser.VAR)
                pass

            elif la_ == 7:
                localctx = jsbachParser.NoteContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 111
                self.match(jsbachParser.NOTE)
                pass

            elif la_ == 8:
                localctx = jsbachParser.StringContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 112
                self.match(jsbachParser.STRING)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 124
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        localctx = jsbachParser.ArithmeticContext(self, jsbachParser.ExprContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 115
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 116
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.MUL) | (1 << jsbachParser.DIV) | (1 << jsbachParser.MOD))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 117
                        self.expr(9)
                        pass
